# pyvoicebox

./: .gitignore  404.html  CONVERSION_PLAN.md  PROGRESS.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  tests.yml
acknowledgements/: index.html
api/: index.html
api/audio-io/: index.html
api/frequency-scales/: index.html
api/information-theory/: index.html
api/lpc/: index.html
api/plotting/: index.html
api/probability/: index.html
api/rotation-geometry/: index.html
api/signal-processing/: index.html
api/speech-analysis/: index.html
api/speech-coding/: index.html
api/speech-enhancement/: index.html
api/speech-recognition/: index.html
api/speech-synthesis/: index.html
api/transforms/: index.html
api/utility/: index.html
api/vector-distance/: index.html
assets/javascripts/: home.js
comparison/: index.html
docs/: acknowledgements.md  comparison.md  getting-started.md  index.md  overview.md  testing.md
docs/api/: audio-io.md  frequency-scales.md  index.md  information-theory.md  lpc.md  plotting.md  probability.md  rotation-geometry.md  signal-processing.md  speech-analysis.md  speech-coding.md  speech-enhancement.md  speech-recognition.md  speech-synthesis.md  transforms.md  utility.md  vector-distance.md
docs/examples/: emotion-recognition.md  index.md  lpc-analysis.md  speaker-identification.md  speech-analysis.md  speech-enhancement.md
docs/overrides/: home.html
docs/overrides/assets/stylesheets/: home.css
examples/: index.html
examples/emotion-recognition/: index.html
examples/lpc-analysis/: index.html
examples/speaker-identification/: index.html
examples/speech-analysis/: index.html
examples/speech-enhancement/: index.html
getting-started/: index.html
notebooks/: 01_speech_analysis.ipynb  02_speech_enhancement.ipynb  03_lpc_analysis.ipynb  04_speaker_identification.ipynb  05_emotion_recognition.ipynb  README.md
overrides/: home.html
overview/: index.html
pyvoicebox/: __init__.py  _compat.py  activlev.py  activlevg.py  atan2sc.py  axisenlarge.py  bark2frq.py  berk2prob.py  besselratio.py  besselratioi.py  bitsprec.py  cblabel.py  ccwarpf.py  cent2frq.py  cep2pow.py  choosenk.py  choosrnk.py  convfft.py  correlogram.py  distchar.py  distchpf.py  disteusq.py  distisar.py  distispf.py  distitar.py  distitpf.py  ditherq.py  dlyapsq.py  dualdiag.py  dypsa.py  enframe.py  entropy.py  erb2frq.py  estnoiseg.py  estnoisem.py  ewgrpdel.py  fig2emf.py  fig2pdf.py  figbolden.py  filtbankm.py  (+501 more)
search/: search_index.json
testing/: index.html
tests/: conftest.py  test_audio_io.py  test_distance.py  test_frequency_scales.py  test_lpc.py  test_phase1.py  test_phase10.py  test_phase10b.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_plotting.py  test_probability.py  test_rotation.py  test_signal_processing.py  test_speech.py  test_transforms.py  test_utility.py
tests/octave_harness/: gen_ref_phase1.m  gen_ref_phase10.m  gen_ref_phase10b.m  gen_ref_phase2.m  gen_ref_phase3.m  gen_ref_phase4.m  gen_ref_phase5.m  gen_ref_phase6.m  gen_ref_phase7.m  gen_ref_phase8.m  gen_ref_phase9.m
tests/tmp/: normcdf.m  normpdf.m
