[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvoicebox"
dynamic = ["version"]
description = "Python port of VOICEBOX speech processing toolbox"
readme = "README.md"
requires-python = ">=3.9"
license = "LGPL-3.0-or-later"
authors = [
    { name = "MFA-X-AI" },
]
keywords = ["speech", "audio", "dsp", "lpc", "mfcc", "voicebox", "matlab"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "soundfile",
]

[project.urls]
Homepage = "https://github.com/MFA-X-AI/pyvoicebox"
Documentation = "https://mfa-x-ai.github.io/pyvoicebox/"
Repository = "https://github.com/MFA-X-AI/pyvoicebox"
Issues = "https://github.com/MFA-X-AI/pyvoicebox/issues"
"Original MATLAB" = "https://github.com/ImperialCollegeLondon/sap-voicebox"

[project.optional-dependencies]
plot = ["matplotlib"]
notebooks = ["matplotlib", "pandas", "scikit-learn", "notebook"]
dev = ["pytest", "matplotlib"]
docs = ["mkdocs-material", "mkdocstrings[python]", "ruff"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["pyvoicebox*"]
